# weight-inspect

./: .gitignore  Cargo.toml  GGUF.md  README.md  SPEC.md  build.rs
.github/workflows/: release.yml
docs/: safetensors.md
examples/: diff-output.txt  identity-output.txt  inspect-output.txt
scripts/: create_test_fixtures.py
src/: diff.rs  hash.rs  lib.rs  main.rs  types.rs
src/gguf/: mod.rs
src/onnx/: mod.rs
src/safetensors/: mod.rs
tests/: cli.rs
tests/fixtures/: empty.gguf  tiny.gguf  tiny.safetensors
tests/golden/: diff_identical.txt  id_tiny_gguf.txt  inspect_tiny_gguf.txt
