[package]
name = "weight-inspect"
version = "0.1.0"
edition = "2021"
description = "Inspect GGUF, safetensors, and ONNX model files"
license = "MIT"
repository = "https://github.com/las7/weight-inspect"
keywords = ["gguf", "safetensors", "onnx", "model", "inspection"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
prost = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1.5"

[build-dependencies]
prost-build = { version = "0.12", optional = true }

[features]
default = []
onnx = ["dep:prost", "dep:prost-build"]
